--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Seismic cycle Racing: Blog
+title: Seismic Cycle Racing Blog
 email: goride42@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   An infrequently updated race blog for the Seismic Cycle Racing early-mid-life
