--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  calum-chamberlain
 
 # Build settings
-theme: jekyll-theme-tactile
+#theme: jekyll-theme-tactile
+remote-theme: Jekyll-Modern-Blog
 plugins:
   - jekyll-feed
 
