--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  calum-chamberlain
 
 # Build settings
 #theme: jekyll-theme-tactile
-remote-theme: Open-SL/Jekyll-Modern-Blog
+remote-theme: pages-theme/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
