Switch to YAT and configure

--- a/_config.yml
+++ b/_config.yml
@@ -20,17 +20,16 @@
 
 title: SeismicCycleRacing Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  A blog for the SeismicCycleRacing team.
+  A blog for the [SeismicCycleRacing](https://seismiccycleracing.com) team.
 github_username:  calum-chamberlain
-#baseurl: "/SCR-blog" # the subpath of your site, e.g. /blog
-#url: "http://seismiccycleracing.com/blog" # the base hostname & protocol for your site, e.g. http://example.com
-# url: "https://SCR-blog.github.io"
-#domain: seismiccycleracing.com
 
 # Build settings
-theme: minima
+# theme: minima
+# theme: owner/name --> Don't forget to remove/comment the gem-based theme option
+remote_theme: "jeffreytse/jekyll-theme-yat"
 plugins:
   - jekyll-feed
+  - jekyll-spaceship
 
 # Exclude from processing.
 # The following items will not be processed, by default.
