--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: SeismicCycleRacing Blog
+title: "SeismicCycleRacing Blog"
 description: >- # this means to ignore newlines until "baseurl:"
   A blog for the [SeismicCycleRacing](https://seismiccycleracing.com) team.
 github_username:  calum-chamberlain
@@ -50,3 +50,8 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+#
+night_mode: "on"
+brand_color: "#648c64ff"
+
+google_analytics: "G-KZ2NWQDJ2H"
