--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ title: "SeismicCycleRacing Blog"
 description: >- # this means to ignore newlines until "baseurl:"
   A blog for the [SeismicCycleRacing](https://seismiccycleracing.com) team.
 github_username:  calum-chamberlain
+repository: SeismicCycleRacing/SCR-blog
 
 # Build settings
 # theme: minima
