--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,10 @@ github_username:  calum-chamberlain
 repository: SeismicCycleRacing/SCR-blog
 
 # Build settings
-# theme: jekyll-theme-minimal
+# theme: jekyll-theme-yat
 # theme: owner/name --> Don't forget to remove/comment the gem-based theme option
-remote_theme: "jeffreytse/jekyll-theme-yat@v1.10.0"
+remote_theme: "jeffreytse/jekyll-theme-yat@25e15cf"
+# remote_theme: "jeffreytse/jekyll-theme-yat@v1.10.0"
 plugins:
   - jekyll-feed
   - jekyll-spaceship
